Version 3.0.0
Signed-off-by: pizzi80 <paolo@given2.com>